--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,8 @@
   --db-bg_lighter: rgba(255, 255, 255, 1);
   --db-font_light: rgba(255, 255, 255, 1);
   --db-font_dark: rgba(33, 37, 41, 1);
+  --db-search_bar: rgba(229, 229, 229, 1);
+  --db-bell: rgba(255, 143, 0, 1);
 }
 
 ._bg_primary {
@@ -21,25 +23,23 @@
 .debug {
 
   #site_header {
-    background-color: lightcyan;
+    /* background-color: lightcyan; */
     height: 10vh;
 
-    ._logo,
-    ._search_bar,
-    ._header_menu {
+    ._logo {
       height: 70px;
     }
 
-    ._search_bar {
-      width: 80%;
-      background-color: lightblue;
+    ._search {
+      width: 90%;
+      /* background-color: lightblue; */
     }
 
     ._logo,
     ._header_menu {
       flex-grow: 1;
-      background-color: lightskyblue;
-      min-width: 80px;
+      /* background-color: lightskyblue; */
+      /* min-width: 80px; */
     }
   }
 
@@ -51,6 +51,7 @@
 
     ._dashboard {
       height: 90vh;
+      overflow-y: auto;
 
       ._dashboard_top {
         background-color: var(--db-secondary);
@@ -85,6 +86,10 @@
 
 /* #region ||||| COMMON RULES ||||| */
 
+body {
+  overflow: hidden;
+}
+
 ul {
   list-style: none;
 
@@ -95,6 +100,54 @@ ul {
 
 /* #endregion ||||| COMMON RULES ||||| */
 
+
+/* #region ||||| HEADER RULES ||||| */
+
+#site_header {
+  background-color: var(--db-bg_lighter);
+
+  ._mobile_logo {
+    max-height: 100%;
+  }
+
+  ._search {
+    height: 50px;
+
+    ._search_bar {
+      width: 100%;
+      height: 35px;
+      background-color: var(--db-search_bar);
+
+      i {
+        color: var(--db-font_dark);
+        padding: 0.5rem;
+      }
+
+      input[type=search] {
+        width: 100%;
+        background-color: var(--db-search_bar);
+        border: none;
+        outline: none;
+      }
+    }
+  }
+
+  ._header_menu {
+
+    ul {
+
+      a {
+        color: var(--db-font_dark);
+      }
+
+      .fa-bell {
+        color: var(--db-bell);
+      }
+    }
+  }
+}
+
+/* #endregion ||||| HEADER RULES ||||| */
 
 /* #region ||||| MAIN RULES ||||| */
 
