--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,7 +112,7 @@ ul {
 
     ._search_bar {
       width: 100%;
-      height: 35px;
+      height: 45px;
       background-color: var(--db-search_bar);
 
       i {
@@ -125,6 +125,9 @@ ul {
         background-color: var(--db-search_bar);
         border: none;
         outline: none;
+        font-size: 0.9rem;
+        font-weight: 500;
+        line-height: 1px;
       }
     }
   }
@@ -170,9 +173,17 @@ ul {
 
     ._dashboard_top {
       background-color: var(--db-secondary);
-      height: 150px;
       color: var(--db-font_light);
 
+      ._add_new_student {
+        min-width: 180px;
+      }
+
+      ._plan {
+        .badge {
+          font-size: 0.9rem;
+        }
+      }
     }
 
   }
