Add responsive todo card

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,10 +56,10 @@
       /* ._faq {
         height: 250px;
       } */
-
+      /* 
       ._todo {
         height: 200px;
-      }
+      } */
 
       ._analytics {
         height: 600px;
