--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,9 +61,9 @@
         height: 200px;
       } */
 
-      ._analytics {
+      /* ._analytics {
         height: 600px;
-      }
+      } */
     }
   }
 }
